--- a/src/Sulu/Bundle/CollaborationBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/CollaborationBundle/Resources/translations/sulu/backend.nl.xlf
@@ -4,11 +4,10 @@
         <body>
             <trans-unit id="1" resname="collaboration.warning">
                 <source>content.collaboration.warning</source>
-                <target>
-                    <![CDATA[
-                    Deze pagina is in gebruik door: <strong>%s</strong><br/>
-                    Je wijzigingen gaan mogelijk verlorgen of je wist het werk een andere auteur.
-                    ]]>
+                <target><![CDATA[
++                    Deze pagina is in gebruik door: <strong>%s</strong><br/>
++                    Je wijzigingen gaan mogelijk verlorgen of je wist het werk een andere auteur.
++                    ]]></target>
             </trans-unit>
         </body>
     </file>
