--- a/src/Sulu/Bundle/MediaBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/MediaBundle/Resources/translations/sulu/backend.nl.xlf
@@ -72,7 +72,7 @@
             </trans-unit>
             <trans-unit id="90a3264459ba0f52ef7a4d3c0298d5d" resname="media.collection.title">
                 <source>media.collection.title</source>
-                <target>Collectie-titel</target>
+                <target>Collectietitel</target>
             </trans-unit>
             <trans-unit id="90a3264459ba0f52ef7a4d3c0298d5f" resname="labels.success.collection-save-desc">
                 <source>labels.success.collection-save-desc</source>
@@ -172,11 +172,11 @@
             </trans-unit>
             <trans-unit id="c28342a4fe2011e4a3221697f925ec7b" resname="media-selection.overlay.selected-image-label">
                 <source>media-selection.overlay.selected-image-label</source>
-                <target>afbeelding geselecteerd</target>
+                <target>Afbeelding geselecteerd</target>
             </trans-unit>
             <trans-unit id="243d88cf2f64652633a5ca2169f22456" resname="media-selection.overlay.selected-images-label">
                 <source>media-selection.overlay.selected-images-label</source>
-                <target>afbeeldingen geselecteerd</target>
+                <target>Afbeeldingen geselecteerd</target>
             </trans-unit>
             <trans-unit id="243d88cf2f64652633a5ca2169f27623" resname="media-selection.list-toolbar.upload-info">
                 <source>media-selection.list-toolbar.upload-info</source>
@@ -184,7 +184,7 @@
             </trans-unit>
             <trans-unit id="243d88fse564652633a5ca2169f22407" resname="sulu.media.edit-collection">
                 <source>sulu.media.edit-collection</source>
-                <target>Bewerkt collectie</target>
+                <target>Bewerk collectie</target>
             </trans-unit>
             <trans-unit id="243d88cf2f64652633a5cr443gf22407" resname="sulu.media.upload-new-version">
                 <source>sulu.media.upload-new-version</source>
@@ -200,7 +200,7 @@
             </trans-unit>
             <trans-unit id="243d88440f24652633778k2169f22407" resname="sulu.header.edit-collection">
                 <source>sulu.header.edit-collection</source>
-                <target>Bewerkt collectie</target>
+                <target>Bewerk collectie</target>
             </trans-unit>
             <trans-unit id="243d88cf2f646526337ls55369f22407" resname="sulu.header.delete-collection">
                 <source>sulu.header.delete-collection</source>
