--- a/src/Sulu/Bundle/ResourceBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/ResourceBundle/Resources/translations/sulu/backend.nl.xlf
@@ -48,7 +48,7 @@
             </trans-unit>
             <trans-unit id="12" resname="resource.filter.resultText">
                 <source>resource.filter.resultText</source>
-                <target>match je filter</target>
+                <target>Match je filter</target>
             </trans-unit>
             <trans-unit id="13" resname="resource.filter.edit">
                 <source>resource.filter.edit</source>
