--- a/src/Sulu/Bundle/SnippetBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/SnippetBundle/Resources/translations/sulu/backend.nl.xlf
@@ -32,7 +32,7 @@
             </trans-unit>
             <trans-unit id="10" resname="snippet.delete-confirm-text">
                 <source>snippet.delete-confirm-text</source>
-                <target>Weet je zeker dat je het wilt verwijderen?</target>
+                <target>Weet je zeker dat je het fragment wilt verwijderen?</target>
             </trans-unit>
             <trans-unit id="11" resname="snippet.delete-confirm-title">
                 <source>snippet.delete-confirm-title</source>
@@ -48,7 +48,7 @@
             </trans-unit>
             <trans-unit id="14" resname="snippet-content.nosnippets-selected">
                 <source>snippet.delete-no-snippets-selected</source>
-                <target>Geen fragmenten geselecteerd</target>
+                <target>Geen fragment(en) geselecteerd</target>
             </trans-unit>
             <trans-unit id="e4b1428ja8a085edecd67tf5acb2d39e" resname="search-overlay.index.snippet.title">
                 <source>search-overlay.index.snippet.title</source>
