--- a/src/Sulu/Bundle/WebsiteBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/WebsiteBundle/Resources/translations/sulu/backend.nl.xlf
@@ -12,7 +12,7 @@
             </trans-unit>
             <trans-unit id="123f522ac181350142c0b4720e29003" resname="sulu.website.cache.title">
                 <source>sulu.website.cache.title</source>
-                <target>Cache instellingen</target>
+                <target>Cache-instellingen</target>
             </trans-unit>
             <trans-unit id="123f522ac181350142c0b4720e29004" resname="sulu.website.cache.remove.success.title">
                 <source>sulu.website.cache.remove.success.title</source>
@@ -44,7 +44,7 @@
             </trans-unit>
             <trans-unit id="4" resname="website.webspace.settings.content">
                 <source>website.webspace.settings.content</source>
-                <target>Content</target>
+                <target>Inhoud</target>
             </trans-unit>
             <trans-unit id="5" resname="website.webspace.settings.type.google">
                 <source>website.webspace.settings.type.google</source>
@@ -68,7 +68,7 @@
             </trans-unit>
             <trans-unit id="10" resname="website.webspace.settings.key">
                 <source>website.webspace.settings.key</source>
-                <target>Key</target>
+                <target>Sleutel</target>
             </trans-unit>
             <trans-unit id="11" resname="website.webspace.settings.script">
                 <source>website.webspace.settings.script</source>
